--- a/sanjeh/release/nicepage.css
+++ b/sanjeh/release/nicepage.css
@@ -37978,6 +37978,11 @@ a.u-link.u-text-hover-grey-90:hover {
         
         
         
+        
+        
+        
+        
+        
         }
 
         /** common-rules **/
@@ -38095,6 +38100,14 @@ a.u-link.u-text-hover-grey-90:hover {
         {
         margin-top: 20px;
         margin-bottom: 20px;
+        }
+        .u-body
+        {
+        background-image: url("images/default-image.jpg");
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
         }
         /** common-rules **/
 
@@ -38262,70 +38275,10 @@ a.u-link.u-text-hover-grey-90:hover {
 
 /*end-variables sitestylecss*/
 .u-header .u-sheet-1 {
-  min-height: 233px;
-}
-
-.u-header .u-text-1 {
-  margin: 85px 0 0 auto;
-}
-
-.u-header .u-text-2 {
-  margin-left: auto;
-  margin-right: 0;
-  margin-bottom: 60px;
-  background-image: none;
-}
-
-.u-header .u-btn-1 {
-  background-image: none;
-}
-
-.u-header .u-text-3 {
-  width: auto;
-  font-family: iran_yekan_mobile_regular;
-  margin: 20px 0 0;
-}
-
-.u-header .u-text-4 {
-  width: 340px;
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 60px;
-}
-.u-header .u-sheet-2 {
-  min-height: 100px;
-}
-.u-header .u-sheet-3 {
-  min-height: 100px;
+  min-height: 512px;
 }
 
 
-
-
-
-
-
-
-
-@media (max-width: 575px) {
-  .u-header .u-text-1 {
-    width: auto;
-    font-family: iran_yekan_mobile_regular;
-    margin-top: 33px;
-  }
-
-  .u-header .u-text-2 {
-    font-family: iran_yekan_mobile_regular;
-    width: auto;
-    margin-top: -28px;
-    margin-right: 120px;
-    margin-bottom: 0;
-  }
-
-  .u-header .u-btn-1 {
-    padding: 0;
-  }
-}
 
 
  .u-footer {
