--- a/sanjeh/release/sanjeh.css
+++ b/sanjeh/release/sanjeh.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 151px;
+  min-height: 203px;
 }
 
 .u-section-1 .u-text-1 {
@@ -17,12 +17,15 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 20px auto 0 0;
+  width: auto;
+  font-family: iran_yekan_mobile_regular;
+  font-size: 1rem;
+  margin: 41px 0 60px 155px;
 }
 
 .u-section-1 .u-text-3 {
-  font-family: iran_yekan_mobile_regular;
-  margin: 20px auto -610px 0;
+  font-size: 1rem;
+  margin: 20px 0 10px;
 }
 
 @media (max-width: 1199px) {
@@ -34,10 +37,6 @@
 @media (max-width: 991px) {
   .u-section-1 .u-text-1 {
     margin-right: 535px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-bottom: 60px;
   }
 }
 
@@ -54,7 +53,14 @@
   }
 
   .u-section-1 .u-text-1 {
-    margin-right: 155px;
+    width: 185px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-bottom: 0;
+    width: auto;
   }
 } .u-section-2 {
   background-image: none;
@@ -85,182 +91,8 @@
 @media (max-width: 575px) {
   .u-section-2 .u-line-1 {
     width: 340px;
-  }
-} .u-section-3 {
-  background-image: none;
-}
-
-.u-section-3 .u-sheet-1 {
-  min-height: 151px;
-}
-
-.u-section-3 .u-text-1 {
-  font-family: iran_yekan_mobile_regular;
-  margin: 0 955px 0 0;
-}
-
-.u-section-3 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-3 .u-text-2 {
-  margin: 20px auto 0 0;
-}
-
-.u-section-3 .u-text-3 {
-  font-family: iran_yekan_mobile_regular;
-  margin: 20px auto -249px 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-3 .u-text-1 {
-    margin-right: 755px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-3 .u-text-1 {
-    margin-right: 535px;
-  }
-
-  .u-section-3 .u-text-3 {
-    margin-bottom: 60px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-3 .u-text-1 {
-    margin-right: 355px;
-  }
-}
-
-@media (max-width: 575px) {
-   .u-section-3 {
-    margin-top: 20px;
-    margin-bottom: 0;
-  }
-
-  .u-section-3 .u-text-1 {
-    margin-right: 155px;
-  }
-} .u-section-4 {
-  background-image: none;
-}
-
-.u-section-4 .u-sheet-1 {
-  min-height: 48px;
-}
-
-.u-section-4 .u-line-1 {
-  width: 912px;
-  height: 0;
-  margin: 10px auto -102px;
-}
-
-@media (max-width: 991px) {
-  .u-section-4 .u-line-1 {
-    width: 720px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-4 .u-line-1 {
-    width: 540px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-4 .u-line-1 {
-    width: 340px;
-  }
-} .u-section-5 {
-  background-image: none;
-}
-
-.u-section-5 .u-sheet-1 {
-  min-height: 151px;
-}
-
-.u-section-5 .u-text-1 {
-  font-family: iran_yekan_mobile_regular;
-  margin: 0 955px 0 0;
-}
-
-.u-section-5 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-5 .u-text-2 {
-  margin: 20px auto 0 0;
-}
-
-.u-section-5 .u-text-3 {
-  font-family: iran_yekan_mobile_regular;
-  margin: 20px auto -249px 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-5 .u-text-1 {
-    margin-right: 755px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-5 .u-text-1 {
-    margin-right: 535px;
-  }
-
-  .u-section-5 .u-text-3 {
-    margin-bottom: 60px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-5 .u-text-1 {
-    margin-right: 355px;
-  }
-}
-
-@media (max-width: 575px) {
-   .u-section-5 {
-    margin-top: 20px;
-    margin-bottom: 0;
-  }
-
-  .u-section-5 .u-text-1 {
-    margin-right: 155px;
-  }
-} .u-section-6 {
-  background-image: none;
-}
-
-.u-section-6 .u-sheet-1 {
-  min-height: 48px;
-}
-
-.u-section-6 .u-line-1 {
-  width: 912px;
-  height: 0;
-  margin: 10px auto -102px;
-}
-
-@media (max-width: 991px) {
-  .u-section-6 .u-line-1 {
-    width: 720px;
-  }
-}
-
-@media (max-width: 767px) {
-  .u-section-6 .u-line-1 {
-    width: 540px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-6 .u-line-1 {
-    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }@font-face {
   font-family: 'iran_yekan_mobile_regular';
