--- a/sanjeh/release/sanjeh.css
+++ b/sanjeh/release/sanjeh.css
@@ -1,5 +1,7 @@
  .u-section-1 {
   background-image: none;
+  margin-top: 20px;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -8,7 +10,8 @@
 
 .u-section-1 .u-text-1 {
   font-family: iran_yekan_mobile_regular;
-  margin: 0 955px 0 0;
+  width: 185px;
+  margin: 0 auto;
 }
 
 .u-section-1 .u-btn-1 {
@@ -17,53 +20,31 @@
 }
 
 .u-section-1 .u-text-2 {
-  width: auto;
   font-family: iran_yekan_mobile_regular;
   font-size: 1rem;
-  margin: 41px 0 60px 155px;
+  margin: 41px 78px 0;
 }
 
 .u-section-1 .u-text-3 {
-  font-size: 1rem;
+  font-size: 0.875rem;
   margin: 20px 0 10px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-text-1 {
-    margin-right: 755px;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-1 .u-text-1 {
-    margin-right: 535px;
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-right: 0;
+    margin-left: 155px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-text-1 {
-    margin-right: 355px;
-  }
-}
-
-@media (max-width: 575px) {
-   .u-section-1 {
-    margin-top: 20px;
-    margin-bottom: 0;
-  }
-
-  .u-section-1 .u-text-1 {
-    width: 185px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-bottom: 0;
-    width: auto;
+    margin-top: 60px;
   }
 } .u-section-2 {
   background-image: none;
+  margin-top: 20px;
 }
 
 .u-section-2 .u-sheet-1 {
@@ -93,6 +74,53 @@
     width: 340px;
     margin-left: 0;
     margin-right: 0;
+  }
+} .u-section-3 {
+  background-image: none;
+  margin-top: 20px;
+}
+
+.u-section-3 .u-sheet-1 {
+  min-height: 223px;
+}
+
+.u-section-3 .u-text-1 {
+  font-family: iran_yekan_mobile_regular;
+  width: 185px;
+  margin: 5px auto 0;
+}
+
+.u-section-3 .u-btn-1 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-3 .u-text-2 {
+  font-family: iran_yekan_mobile_regular;
+  font-size: 1rem;
+  margin: 41px 78px 0;
+}
+
+.u-section-3 .u-text-3 {
+  font-size: 1rem;
+  margin: 60px 0 5px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-text-2 {
+    width: auto;
+    margin-right: 0;
+    margin-left: 155px;
+  }
+}
+
+@media (max-width: 575px) {
+   .u-section-3 {
+    margin-bottom: 0;
+  }
+
+  .u-section-3 .u-text-3 {
+    font-size: 0.875rem;
   }
 }@font-face {
   font-family: 'iran_yekan_mobile_regular';
