--- a/sanjeh/release/sanjeh.css
+++ b/sanjeh/release/sanjeh.css
@@ -1,30 +1,15 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 100vh;
 }
 
 .u-section-1 .u-text-1 {
   font-family: iran_yekan_mobile_regular;
-  margin: 69px auto 0;
-}
-
-.u-section-1 .u-text-2 {
-  font-family: iran_yekan_mobile_regular;
-  width: auto;
-  text-transform: uppercase;
-  line-height: 1;
-  font-size: 1.875rem;
-  margin: 177px auto 0;
-}
-
-.u-section-1 .u-btn-1 {
-  letter-spacing: 1px;
-  border-style: none;
-  font-weight: 700;
+  margin: 60px auto 0;
 }
 
 .u-section-1 .u-countdown-1 {
   box-shadow: 2px 0 0 0 rgba(0,0,0,0);
-  margin: 80px auto 60px;
+  margin: 60px auto 0;
 }
 
 .u-section-1 .u-countdown-counter-1 {
@@ -123,27 +108,72 @@
   text-transform: uppercase;
 }
 
+.u-section-1 .u-text-2 {
+  font-family: iran_yekan_mobile_regular;
+  text-transform: uppercase;
+  line-height: 1;
+  font-size: 1.875rem;
+  margin: 52px 0 60px;
+}
+
+.u-section-1 .u-btn-1 {
+  letter-spacing: 1px;
+  border-style: none;
+  font-weight: 700;
+  background-image: none;
+}
+
+.u-section-1 .u-text-3 {
+  font-family: iran_yekan_mobile_regular;
+  width: auto;
+  margin: -334px 7px 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-text-2 {
+    width: auto;
+  }
+}
+
 @media (max-width: 991px) {
   .u-section-1 .u-countdown-1 {
-    margin-top: 71px;
+    margin-top: 298px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: -186px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 100vh;
-  }
-
   .u-section-1 .u-text-1 {
     width: auto;
-    margin-top: 60px;
+    font-weight: 500;
+    margin-top: 99px;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-1 .u-countdown-1 {
-    margin-top: -158px;
-    margin-bottom: 0;
+    margin-top: 155px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin: 126px auto 0;
+  }
+
+  .u-section-1 .u-btn-1 {
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 1.25rem;
+    font-family: iran_yekan_mobile_regular;
+  }
+
+  .u-section-1 .u-text-3 {
+    font-size: 1.25rem;
+    margin-top: -270px;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 }@font-face {
   font-family: 'iran_yekan_mobile_regular';
