--- a/sanjeh/release/sanjeh.css
+++ b/sanjeh/release/sanjeh.css
@@ -4,12 +4,19 @@
 
 .u-section-1 .u-text-1 {
   font-family: iran_yekan_mobile_regular;
-  margin: 60px auto 0;
+  font-weight: normal;
+  margin: 65px auto 0;
+}
+
+.u-section-1 .u-text-2 {
+  font-family: iran_yekan_mobile_regular;
+  font-size: 1.5rem;
+  margin: 102px auto 0;
 }
 
 .u-section-1 .u-countdown-1 {
   box-shadow: 2px 0 0 0 rgba(0,0,0,0);
-  margin: 60px auto 0;
+  margin: 10px auto 0;
 }
 
 .u-section-1 .u-countdown-counter-1 {
@@ -108,12 +115,12 @@
   text-transform: uppercase;
 }
 
-.u-section-1 .u-text-2 {
+.u-section-1 .u-text-3 {
   font-family: iran_yekan_mobile_regular;
   text-transform: uppercase;
   line-height: 1;
   font-size: 1.875rem;
-  margin: 52px 0 60px;
+  margin: 102px 0 60px;
 }
 
 .u-section-1 .u-btn-1 {
@@ -121,59 +128,74 @@
   border-style: none;
   font-weight: 700;
   background-image: none;
-}
-
-.u-section-1 .u-text-3 {
+  font-size: 1.875rem;
   font-family: iran_yekan_mobile_regular;
-  width: auto;
-  margin: -334px 7px 60px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-text-2 {
     width: auto;
   }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+  }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-countdown-1 {
-    margin-top: 298px;
+  .u-section-1 .u-text-1 {
+    width: auto;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: -186px;
+    margin-top: 105px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 87px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-text-1 {
+    margin-top: 88px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 79px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-text-1 {
-    width: auto;
     font-weight: 500;
     margin-top: 99px;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-1 .u-countdown-1 {
-    margin-top: 155px;
+  .u-section-1 .u-text-2 {
+    font-size: 1.25rem;
+    margin-top: 116px;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin: 126px auto 0;
+  .u-section-1 .u-countdown-1 {
+    margin-top: 15px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 126px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-1 {
     padding-left: 20px;
     padding-right: 20px;
     font-size: 1.25rem;
-    font-family: iran_yekan_mobile_regular;
-  }
-
-  .u-section-1 .u-text-3 {
-    font-size: 1.25rem;
-    margin-top: -270px;
-    margin-left: 15px;
-    margin-right: 15px;
+    font-weight: normal;
   }
 }@font-face {
   font-family: 'iran_yekan_mobile_regular';
